# datastax

./: README.md
.github/workflows/: main.yml
.semantic-kernel/results/datastax-sk/datastax_sk/backend/plugins/Transform/PreprocessDataframe/: Transform.PreprocessDataframe.results.json
.semantic-kernel/results/datastax-sk/datastax_sk/backend/plugins/Transform/dfReframer/: Transform.dfReframer.results.json
.semantic-kernel/results/datastax-sk/datastax_sk/backend/plugins/Transform/simpleCodeGen/: Transform.simpleCodeGen.results.json
.semantic-kernel/results/datastax-sk/datastax_sk/backend/sk-functions/Extract/analyzeDataframe/: Extract.analyzeDataframe.results.json
.semantic-kernel/results/datastax-sk/datastax_sk/sk-functions/Extract/dataInit/: Extract.dataInit.results.json
datastax-sk/: pyproject.toml
datastax-sk/datastax_sk/backend/: .env  README.md  app.py
datastax-sk/datastax_sk/backend/plugins/Extract/analyzeDataframe/: config.json  skprompt.txt
datastax-sk/datastax_sk/backend/plugins/Extract/generateQuestions/: skprompt.txt
datastax-sk/datastax_sk/backend/plugins/Transform/dfReframer/: config.json  skprompt.txt
datastax-sk/datastax_sk/backend/plugins/Transform/simpleCodeGen/: config.json  skprompt.txt
datastax-sk/datastax_sk/backend/plugins/Transform/simpleCodeTest/: simpleCodeTest.py
datastax-sk/datastax_sk/backend/temp/: analysisDF.txt  dfquestions.json
datastax-sk/datastax_sk/frontend/: main.py
datastax-sk/datastax_sk/frontend/components/: sidebar.py
datastax-sk/datastax_sk/frontend/core/: utils.py
